Turbolinks correction and overflow added to highlight class
I had not explained the issue with Turbolinks correctly. A clearer and more accurate explanation has been added.

Overflow: scroll has been added to the highlight class so that wide code examples fit neatly into the window.

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -17,13 +17,14 @@
   }
 
   .highlight {
+    background-color: $highlight-color;
     padding: 0 5px;
-    background-color: $highlight-color; 
+    overflow: scroll;
   }
 
   img {
-    max-height: 300px;
     display: block;
     margin: 0 auto;
+    max-height: 300px;
   }
 }
